# aviation-incident-classifier

./: .gitignore  README.md  main.py  pyproject.toml  run_app.sh
.streamlit/: config.toml
app/: streamlit_app.py
data/annotated/: annotation_set.csv  evaluation_results.json
src/api/: main.py
src/classification/: classifier.py  run_classification.py  schemas.py  taxonomy.py  test_classifier.py
src/db/: models.py
src/evaluation/: evaluate.py  prepare_annotation.py
src/extraction/: hfacs_extractor.py  hfacs_schema.py  run_extraction.py
src/ingestion/: bea_scraper.py  pdf_parser.py  run_parsing.py
src/rag/: chain.py  retriever.py  test_rag.py
src/regulatory/: alert_analyzer.py  easa_scraper.py  run_regulatory.py
src/vector_store/: chroma_client.py  chunker.py  indexer.py
src/weak_signals/: clustering.py  visualization.py
